--- a/workflow.yml
+++ b/workflow.yml
@@ -1,4 +1,4 @@
-name: Full CI/CD Pipeline
+name: Full CI/CD Pipeline with Docker Compose
 
 on:
   push:
@@ -14,84 +14,56 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Get frontend environment variables
-      run: echo "${{ secrets.FRONT_ENV_FILE }}" > frontend.env
+      run: echo "${{ secrets.FRONT_ENV_FILE }}" > frontend/frontend.env
 
     - name: Get backend environment variables
-      run: echo "${{ secrets.BACKEND_ENV_FILE }}" > backend.env
+      run: echo "${{ secrets.BACKEND_ENV_FILE }}" > backend/backend.env
 
-    # Cache both environment files
+    # Cache environment files
     - name: Cache frontend environment file
       uses: actions/cache@v3
       with:
-        path: frontend.env
+        path: frontend/frontend.env
         key: env-file-frontend
 
     - name: Cache backend environment file
       uses: actions/cache@v3
       with:
-        path: backend.env
+        path: backend/backend.env
         key: env-file-backend
 
-  # Cleanup (if needed)
-  cleanup:
+  # Build and Test Docker Compose Services
+  build-test:
     runs-on: ubuntu-latest
+    needs: get-env
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_PASSWORD: testpassword
+        ports:
+          - 5432:5432
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Cleanup unnecessary files
-      run: sudo rm -r .git/
-
-  # Test frontend environment file
-  test-frontend-env:
-    runs-on: ubuntu-latest
-    needs: [get-env]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Verify frontend environment
+    - name: Install Docker Compose
       run: |
-        ls -lah | grep frontend.env
-        cat frontend.env
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
 
-  # Test backend environment file
-  test-backend-env:
+    # Build and test with Docker Compose
+    - name: Build and run services using Docker Compose
+      run: docker-compose up -d --build
+
+    - name: Verify services are running
+      run: docker ps
+
+  # Push Docker images to DockerHub
+  push:
     runs-on: ubuntu-latest
-    needs: [get-env]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Verify backend environment
-      run: |
-        ls -lah | grep backend.env
-        cat backend.env
-
-  # Unit test for backend
-  unit-test-backend:
-    runs-on: ubuntu-latest
-    needs: [test-backend-env]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      run: |
-        sudo apt update
-        sudo apt install python3-venv
-        python3 -m venv myenv
-        source myenv/bin/activate
-        pip install -r requirements.txt
-        pip install flask
-        python test_app.py
-
-  # Build Docker image for frontend
-  build-frontend:
-    runs-on: ubuntu-latest
-    needs: [test-frontend-env]
-    env:
-      DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend
+    needs: build-test
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -99,75 +71,14 @@ jobs:
     - name: Log in to DockerHub
       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    - name: Build frontend Docker image
-      run: docker build -t $DOCKER_IMAGE:${{ github.sha }} .
-
-    - name: List Docker images
-      run: docker images
-
-  # Build Docker image for backend
-  build-backend:
-    runs-on: ubuntu-latest
-    needs: [unit-test-backend]
-    env:
-      DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Log in to DockerHub
-      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-    - name: Build backend Docker image
-      run: docker build -t $DOCKER_IMAGE:${{ github.sha }} .
-
-    - name: List Docker images
-      run: docker images
-
-  # Test frontend Docker image
-  test-frontend-image:
-    runs-on: ubuntu-latest
-    needs: [build-frontend]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Run frontend Docker container for test
+    # Push frontend image
+    - name: Tag and push frontend image
       run: |
-        docker run -dp 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
-        docker ps | grep "3000"
+        docker tag nextapp:1.0.0 ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
 
-  # Test backend Docker image
-  test-backend-image:
-    runs-on: ubuntu-latest
-    needs: [build-backend]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Run backend Docker container for test
+    # Push backend image
+    - name: Tag and push backend image
       run: |
-        docker run -dp 4000:4000 ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
-        docker ps | grep "4000"
-
-  # Push frontend Docker image to DockerHub
-  push-frontend:
-    runs-on: ubuntu-latest
-    needs: [test-frontend-image]
-    steps:
-    - name: Log in to DockerHub
-      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-    - name: Push frontend Docker image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
-
-  # Push backend Docker image to DockerHub
-  push-backend:
-    runs-on: ubuntu-latest
-    needs: [test-backend-image]
-    steps:
-    - name: Log in to DockerHub
-      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-    - name: Push backend Docker image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
+        docker tag flaskapp:1.0.0 ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
