--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,18 +32,10 @@ jobs:
         path: backend/backend.env
         key: env-file-backend
 
-  # Build and Test Docker Compose Services
-  build-test:
+  # Build Docker Compose Services
+  build:
     runs-on: ubuntu-latest
     needs: get-env
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_PASSWORD: testpassword
-        ports:
-          - 5432:5432
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -53,17 +45,14 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y docker-compose
 
-    # Build and test with Docker Compose
-    - name: Build and run services using Docker Compose
-      run: docker-compose up -d --build
-
-    - name: Verify services are running
-      run: docker ps
+    # Build and run with Docker Compose
+    - name: Build services using Docker Compose
+      run: docker-compose build
 
   # Push Docker images to DockerHub
   push:
     runs-on: ubuntu-latest
-    needs: build-test
+    needs: build
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
