add source in frontend

--- a/frontend/frontend.env
+++ b/frontend/frontend.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://ae7924d387bb4433f80de797f933591a-496639598.ap-southeast-1.elb.amazonaws.com:4000
+NEXT_PUBLIC_API_URL=http://localhost:4000
 PORT=3000
 HOSTNAME="0.0.0.0"
 NODE_ENV=production
