--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    # ports:
-    #   - '4000:4000'
+    ports:
+      - '4000:4000'
     restart: always
     env_file:
       - ./backend/backend.env
