--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -44,14 +44,21 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y docker-compose
-    # Build and run with Docker Compose
-    - name: Build services using Docker Compose
-      run: docker-compose build
+    # # Build and run with Docker Compose
+    # - name: Build services using Docker Compose
+    #   run: docker-compose build
+
+    - name: Build frontend image
+      run: |
+        cd ./frontend
+        echo "$DOCKERHUB_PASSWORD" | sudo docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+        sudo docker build -t $DOCKER_IMAGE:${{ github.sha }} .
+
 
     - name: List Docker images
       run: docker images
 
-  # Push Docker images to DockerHub
+  # # Push Docker images to DockerHub
   # push:
   #   runs-on: ubuntu-latest
   #   needs: build
@@ -65,8 +72,8 @@ jobs:
   #   # Push frontend image
   #   - name: Tag and push frontend image
   #     run: |
-  #       docker tag nextapp:1.0.0 ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
-  #       docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+  #       docker tag nextapp:1.0.0 ${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE:${{ github.sha }}
+  #       docker push ${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE:${{ github.sha }}
 
   #   # Push backend image
   #   - name: Tag and push backend image
