--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,8 +51,8 @@ jobs:
     - name: Build frontend image
       run: |
         cd ./frontend
-        echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}"--password-stdin
-        sudo docker build -t $DOCKER_IMAGE:${{ github.sha }} .
+        echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        docker build -t $DOCKER_IMAGE:${{ github.sha }} .
 
 
     - name: List Docker images
