--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,29 +54,34 @@ jobs:
         echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }} .
 
+    - name: Build frontend image
+      run: |
+        cd ./backend
+        echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }} .
 
     - name: List Docker images
       run: docker images
 
-  # # Push Docker images to DockerHub
-  # push:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v3
+  # Push Docker images to DockerHub
+  push:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-  #   - name: Log in to DockerHub
-  #     run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+    - name: Log in to DockerHub
+      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-  #   # Push frontend image
-  #   - name: Tag and push frontend image
-  #     run: |
-  #       docker tag nextapp:1.0.0 ${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE:${{ github.sha }}
-  #       docker push ${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE:${{ github.sha }}
+    # Push frontend image
+    - name: Tag and push frontend image
+      run: |
+        docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE:${{ github.sha }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/$DOCKER_IMAGE:${{ github.sha }}
 
-  #   # Push backend image
-  #   - name: Tag and push backend image
-  #     run: |
-  #       docker tag flaskapp:1.0.0 ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
-  #       docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
+    # Push backend image
+    - name: Tag and push backend image
+      run: |
+        docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
