push frontend image

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,7 +54,7 @@ jobs:
         echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }} .
 
-    - name: Build frontend image
+    - name: Build backend image
       run: |
         cd ./backend
         echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
@@ -74,11 +74,11 @@ jobs:
     - name: Log in to DockerHub
       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    # Push frontend image
-    - name: Build backend image
+    # Push image
+    - name: Tag and push frontend image
       run: |
-        cd ./backend
-        docker build -t flaskapp .
+        docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
   
     - name: Tag and push backend image
       run: |
