--- a/workflow.yml
+++ b/workflow.yml
@@ -53,11 +53,11 @@ jobs:
       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
     # Push frontend image
-    - name: Tag and push frontend image
+    - name: Push frontend image
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
 
     # Push backend image
-    - name: Tag and push backend image
+    - name: Push backend image
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
