--- a/workflow.yml
+++ b/workflow.yml
@@ -46,24 +46,21 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y docker-compose
 
-    # Build and run with Docker Compose
-    - name: Build services using Docker Compose
-      run: docker-compose build
+    # Build and tag frontend service using Docker Compose
+    - name: Build and tag frontend service
+      run: docker-compose build frontend && docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
 
+    # Build and tag backend service using Docker Compose
+    - name: Build and tag backend service
+      run: docker-compose build backend && docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
+
+    # Log in to DockerHub
     - name: Log in to DockerHub
       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-    # Tag frontend image
-    - name: Tag frontend image
-      run: docker tag nextapp:latest ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
 
     # Push frontend image
     - name: Push frontend image
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
-
-    # Tag backend image
-    - name: Tag backend image
-      run: docker tag flaskapp:latest ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
 
     # Push backend image
     - name: Push backend image
