--- a/workflow.yml
+++ b/workflow.yml
@@ -35,7 +35,7 @@ jobs:
 
   # Build Docker Compose Services
   build-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: get-env
     steps:
     - name: Checkout code
