running on github runner

--- a/workflow.yml
+++ b/workflow.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   # Prepare: Get Environment Variables for both frontend and backend
   get-env:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
