--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,14 +1,15 @@
-name: Build Pipeline with Docker Compose
+name: Full CI/CD Pipeline with Docker Compose
 
 on:
   push:
-    branches:
-      - main
+    branches: main
+  pull_request:
+    branches: main
 
 jobs:
   # Prepare: Get Environment Variables for both frontend and backend
   get-env:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -33,8 +34,8 @@ jobs:
         key: env-file-backend
 
   # Build Docker Compose Services
-  build:
-    runs-on: ubuntu-latest
+  build-push:
+    runs-on: self-hosted
     needs: get-env
     steps:
     - name: Checkout code
@@ -44,44 +45,23 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y docker-compose
-    # # Build and run with Docker Compose
-    # - name: Build services using Docker Compose
-    #   run: docker-compose build
 
-    - name: Build frontend image
-      run: |
-        cd ./frontend
-        echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }} .
-  
+    # Build and tag frontend service using Docker Compose
+    - name: Build and tag frontend service
+      run: docker-compose build frontend && docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
 
-    - name: Build backend image
-      run: |
-        cd ./backend
-        echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }} .
+    # Build and tag backend service using Docker Compose
+    - name: Build and tag backend service
+      run: docker-compose build backend && docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
 
-    - name: List Docker images
-      run: docker images
-
-  # Push Docker images to DockerHub
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
+    # Log in to DockerHub
     - name: Log in to DockerHub
       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    # Push image
-    - name: Tag and push frontend image
-      run: |
-        docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
-  
-    - name: Tag and push backend image
-      run: |
-        docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
+    # Push frontend image
+    - name: Push frontend image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+
+    # Push backend image
+    - name: Push backend image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
