--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,7 @@ jobs:
         key: env-file-backend
 
   # Build Docker Compose Services
-  build-push:
+  build:
     runs-on: self-hosted
     needs: get-env
     steps:
@@ -45,6 +45,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y docker-compose
+    
+    # Log in to DockerHub
+    - name: Log in to DockerHub
+      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
     # Build and tag frontend service using Docker Compose
     - name: Build and tag frontend service
@@ -53,6 +57,13 @@ jobs:
     # Build and tag backend service using Docker Compose
     - name: Build and tag backend service
       run: docker-compose build backend && docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
+
+  push:
+    runs-on: self-hosted
+    needs: push
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     # Log in to DockerHub
     - name: Log in to DockerHub
