--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,7 +52,9 @@ jobs:
 
     # Build and tag frontend service using Docker Compose
     - name: Build and tag frontend service
-      run: docker-compose build frontend && docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+      run: |
+        docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }} .
 
     # Build and tag backend service using Docker Compose
     - name: Build and tag backend service
