--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Clean up Docker images
-      run: docker system prune -af
+      run: sudo docker system prune -af
 
   # Build Docker Compose Services
   build-and-push:
@@ -50,10 +50,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
+    # - name: Install Docker Compose
+    #   run: |
+    #     sudo apt-get update
+    #     sudo apt-get install -y docker-compose
     
     # Log in to DockerHub
     - name: Log in to DockerHub
