delete push step

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -64,37 +64,13 @@ jobs:
       run: |
         cd ./frontend
         sudo docker build -t nextapp .
-        sudo docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
-        sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+        # sudo docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
+        sudo docker push nextapp
 
     # Build and tag backend service using Docker Compose
     - name: Build and tag backend service
       run: |
         cd ./backend
         sudo docker build -t flaskapp .
-        sudo docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
-        sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
-
-  # push:
-  #   runs-on: self-hosted
-  #   needs: build
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v3
-
-  #   # Log in to DockerHub
-  #   - name: Log in to DockerHub
-  #     run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-  #   # Push frontend image
-  #   - name: Push frontend image
-  #     run: |
-  #       sudo docker tag nextapp ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
-  #       sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/nextapp:${{ github.sha }}
-
-  #   # Push backend image
-  #   - name: Push backend image
-  #     run: |
-  #       sudo docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
-  #       sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
-      
+        # sudo docker tag flaskapp ${{ secrets.DOCKERHUB_USERNAME }}/flaskapp:${{ github.sha }}
+        sudo docker push flaskapp    
