CI/CD on seft-hosted

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,6 +54,7 @@ jobs:
         sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend
         sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
 
+CI/CD on seft-hosted CI/CD on seft-hosted 
     # Build and push backend service using Docker Compose
     - name: Build and push backend service
       run: |
