--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,12 +33,15 @@ jobs:
         key: env-file-backend
 
   # Build and push images
-  build-and-push:
+  build-push:
     runs-on: self-hosted
     needs: get-env
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     
     # Log in to DockerHub
     - name: Log in to DockerHub
@@ -48,17 +51,10 @@ jobs:
     - name: Build and push frontend service
       run: |
         cd ./frontend
-        echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        sudo docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }} .
-        sudo docker tag ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:latest
-        sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend
-        sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
+        docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }} --push .
 
     # Build and push backend service using Docker Compose
     - name: Build and push backend service
       run: |
         cd ./backend
-        echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        sudo docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }} .
-        sudo docker push ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
-        sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
+        docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }} --push .
