--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,6 +43,12 @@ jobs:
     # Set up Docker Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
+    # Fix permissions for Docker socket
+    - name: Fix Docker socket permissions
+      run: |
+        sudo chown root:docker /var/run/docker.sock
+        sudo chmod 666 /var/run/docker.sock
     
     # Log in to DockerHub
     - name: Log in to DockerHub
