add "Create Buildx builder"

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,6 +52,13 @@ jobs:
     # Set up Docker Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+      with:
+        install: true
+
+    - name: Create Buildx builder
+      run: |
+        docker buildx create --use --name mybuilder --driver docker-container
+        docker buildx inspect mybuilder --bootstrap
     
     # Log in to DockerHub
     - name: Log in to DockerHub
