--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,4 @@
-name: CI/CD Pipeline
-
+name: Actions Runner Controller
 on:
   push:
     branches: main
@@ -8,7 +7,7 @@ on:
 
 jobs:
   get-env:
-    runs-on: self-hosted
+    runs-on: arc-runner-set
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -34,7 +33,7 @@ jobs:
 
   # Build and push images
   build-push:
-    runs-on: self-hosted
+    runs-on: arc-runner-set
     needs: get-env
     steps:
     - name: Checkout code
@@ -64,14 +63,24 @@ jobs:
     - name: Log in to DockerHub
       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    # Build and push frontend service using Docker Compose
-    - name: Build and push frontend service
-      run: |
-        cd ./frontend
-        sudo docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }} --push .
+    # Kaniko setup and build frontend image
+    - name: Build and push frontend image with Kaniko
+      uses: gcr.io/kaniko-project/executor:latest
+      env:
+        DOCKER_CONFIG: /kaniko/.docker/
+      with:
+        args: |
+          --context ./frontend \
+          --dockerfile ./frontend/Dockerfile \
+          --destination ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
 
-    # Build and push backend service using Docker Compose
-    - name: Build and push backend service
-      run: |
-        cd ./backend
-        sudo docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }} --push .
+    # Kaniko setup and build backend image
+    - name: Build and push backend image with Kaniko
+      uses: gcr.io/kaniko-project/executor:latest
+      env:
+        DOCKER_CONFIG: /kaniko/.docker/
+      with:
+        args: |
+          --context ./backend \
+          --dockerfile ./backend/Dockerfile \
+          --destination ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
