--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,3 +1,90 @@
+# # name: Actions Runner Controller
+# # on:
+# #   push:
+# #     branches: main
+# #   pull_request:
+# #     branches: main
+
+# # jobs:
+# #   get-env:
+# #     runs-on: arc-runner-set
+# #     steps:
+# #     - name: Checkout code
+# #       uses: actions/checkout@v3
+
+# #     - name: Get frontend environment variables
+# #       run: echo "${{ secrets.FRONT_ENV_FILE }}" > frontend/frontend.env
+
+# #     - name: Get backend environment variables
+# #       run: echo "${{ secrets.BACKEND_ENV_FILE }}" > backend/backend.env
+
+# #     # Cache environment files
+# #     - name: Cache frontend environment file
+# #       uses: actions/cache@v3
+# #       with:
+# #         path: frontend/frontend.env
+# #         key: env-file-frontend
+
+# #     - name: Cache backend environment file
+# #       uses: actions/cache@v3
+# #       with:
+# #         path: backend/backend.env
+# #         key: env-file-backend
+
+# #   # Build and push images
+# #   build-push:
+# #     runs-on: arc-runner-set
+# #     needs: get-env
+# #     steps:
+# #     - name: Checkout code
+# #       uses: actions/checkout@v3
+
+# #     # Fix permissions for Docker socket
+# #     - name: Fix Docker socket permissions
+# #       run: |
+# #         sudo chown root:docker /var/run/docker.sock
+# #         sudo chmod 666 /var/run/docker.sock
+
+# #     - name: Set up QEMU
+# #       uses: docker/setup-qemu-action@v3
+
+# #     # Set up Docker Buildx
+# #     - name: Set up Docker Buildx
+# #       uses: docker/setup-buildx-action@v3
+# #       with:
+# #         install: true
+
+# #     - name: Create Buildx builder
+# #       run: |
+# #         docker buildx create --use --name mybuilder --driver docker-container
+# #         docker buildx inspect mybuilder --bootstrap
+    
+# #     # Log in to DockerHub
+# #     - name: Log in to DockerHub
+# #       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+# #     # Kaniko setup and build frontend image
+# #     - name: Build and push frontend image with Kaniko
+# #       uses: gcr.io/kaniko-project/executor:latest
+# #       env:
+# #         DOCKER_CONFIG: /kaniko/.docker/
+# #       with:
+# #         args: |
+# #           --context ./frontend \
+# #           --dockerfile ./frontend/Dockerfile \
+# #           --destination ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
+
+# #     # Kaniko setup and build backend image
+# #     - name: Build and push backend image with Kaniko
+# #       uses: gcr.io/kaniko-project/executor:latest
+# #       env:
+# #         DOCKER_CONFIG: /kaniko/.docker/
+# #       with:
+# #         args: |
+# #           --context ./backend \
+# #           --dockerfile ./backend/Dockerfile \
+# #           --destination ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
+
 # name: Actions Runner Controller
 # on:
 #   push:
@@ -31,7 +118,6 @@
 #         path: backend/backend.env
 #         key: env-file-backend
 
-#   # Build and push images
 #   build-push:
 #     runs-on: arc-runner-set
 #     needs: get-env
@@ -39,114 +125,39 @@
 #     - name: Checkout code
 #       uses: actions/checkout@v3
 
-#     # Fix permissions for Docker socket
-#     - name: Fix Docker socket permissions
-#       run: |
-#         sudo chown root:docker /var/run/docker.sock
-#         sudo chmod 666 /var/run/docker.sock
-
-#     - name: Set up QEMU
-#       uses: docker/setup-qemu-action@v3
-
-#     # Set up Docker Buildx
-#     - name: Set up Docker Buildx
-#       uses: docker/setup-buildx-action@v3
-#       with:
-#         install: true
-
-#     - name: Create Buildx builder
-#       run: |
-#         docker buildx create --use --name mybuilder --driver docker-container
-#         docker buildx inspect mybuilder --bootstrap
-    
-#     # Log in to DockerHub
-#     - name: Log in to DockerHub
-#       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-#     # Kaniko setup and build frontend image
+#     # Kaniko build for frontend
 #     - name: Build and push frontend image with Kaniko
-#       uses: gcr.io/kaniko-project/executor:latest
-#       env:
-#         DOCKER_CONFIG: /kaniko/.docker/
+#       uses: aevea/action-kaniko@master
 #       with:
-#         args: |
-#           --context ./frontend \
-#           --dockerfile ./frontend/Dockerfile \
-#           --destination ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
+#         image: aevea/kaniko
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
+#         cache: true
+#         cache_registry: aevea/cache
+#         dockerfile: ./frontend/Dockerfile
+#         context: ./frontend
+#         destination: ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
 
-#     # Kaniko setup and build backend image
+#     # Kaniko build for backend
 #     - name: Build and push backend image with Kaniko
-#       uses: gcr.io/kaniko-project/executor:latest
-#       env:
-#         DOCKER_CONFIG: /kaniko/.docker/
+#       uses: aevea/action-kaniko@master
 #       with:
-#         args: |
-#           --context ./backend \
-#           --dockerfile ./backend/Dockerfile \
-#           --destination ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
+#         image: aevea/kaniko
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
+#         cache: true
+#         cache_registry: aevea/cache
+#         dockerfile: ./backend/Dockerfile
+#         context: ./backend
+#         destination: ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
 
-name: Actions Runner Controller
+name: Actions Runner Controller Demo
 on:
-  push:
-    branches: main
-  pull_request:
-    branches: main
+  workflow_dispatch:
 
 jobs:
-  get-env:
+  Explore-GitHub-Actions:
+    # You need to use the INSTALLATION_NAME from the previous step
     runs-on: arc-runner-set
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Get frontend environment variables
-      run: echo "${{ secrets.FRONT_ENV_FILE }}" > frontend/frontend.env
-
-    - name: Get backend environment variables
-      run: echo "${{ secrets.BACKEND_ENV_FILE }}" > backend/backend.env
-
-    # Cache environment files
-    - name: Cache frontend environment file
-      uses: actions/cache@v3
-      with:
-        path: frontend/frontend.env
-        key: env-file-frontend
-
-    - name: Cache backend environment file
-      uses: actions/cache@v3
-      with:
-        path: backend/backend.env
-        key: env-file-backend
-
-  build-push:
-    runs-on: arc-runner-set
-    needs: get-env
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    # Kaniko build for frontend
-    - name: Build and push frontend image with Kaniko
-      uses: aevea/action-kaniko@master
-      with:
-        image: aevea/kaniko
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        cache: true
-        cache_registry: aevea/cache
-        dockerfile: ./frontend/Dockerfile
-        context: ./frontend
-        destination: ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:${{ github.sha }}
-
-    # Kaniko build for backend
-    - name: Build and push backend image with Kaniko
-      uses: aevea/action-kaniko@master
-      with:
-        image: aevea/kaniko
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        cache: true
-        cache_registry: aevea/cache
-        dockerfile: ./backend/Dockerfile
-        context: ./backend
-        destination: ${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:${{ github.sha }}
+    - run: echo "🎉 This job uses runner scale set runners!"
